Add base App override with sass and relocate stylesheets accordingly

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-dropzone": "latest",
     "react-remarkable": "latest",
-    "react-dropzone": "latest"
+    "sass": "latest"
   },
   "directories": {
     "lib": "src"
