--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "author": "Stoo Goff",
   "license": "ISC",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0"
+  }
 }
